--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "declaration": true,
     "outDir": "./lib",
-    "strict": true
+    "strict": true,
+    "lib": ["es2016", "dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
